# psy-helper

./: .dockerignore  .env.example  .env.example.prod  .gitignore  .tmp_segments.json  .tmp_write_segments.py  CLAUDE.md  Dockerfile  Dockerfile.cuda  docker-compose.cuda.yml  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  tech_spec.md  tech_spec_marketing_funnel.md
.streamlit/: config.toml
data/audience/: competitors.json  market_gaps.json  positioning.md  segment_type_matrix.json
data/channels/: call_script.yaml  carousel_slide.yaml  email_body.yaml  (+7 more)
deploy/: nginx-psy.conf
docs/: Audience Research.md  architecture.html  architecture.md  deploy_v2.md  marketing_system_for_anna.md  review_for_meeting.html  voice_document_v1.html
psy_helper/: search.py  taxonomy.py
scripts/: analyze_speakers.py  batch_transcribe.py  build_style_artifacts.py  classify_concepts_full.py  classify_concepts_local.py  classify_concepts_sample.py  compare_models.py  consolidate_concepts.py  embed_concepts.py  embed_segments.py  extract_concepts_local.py  extract_concepts_via_claude.py  generate_content.py  generate_product_voice_doc.py  generate_voice_doc_via_claude.py  ingest_concepts.py  ingest_concepts_v2.py  ingest_lexicon.py  ingest_raw.py  ingest_segments.py  ingest_voice_doc.py  init_db.py  pilot_review.py  regenerate_voice_doc_v2.py  render_digest.py  render_html.py  render_markdown.py  render_review.py  segment_via_claude.py  streamlit_app.py  suggest_topics.py  transcribe.py
tests/: conftest.py  test_cost.py  test_loaders.py  test_pii.py  test_validators.py
(+57 files in other folders)
